fix: whitespace

--- a/frontend/src/blocks/footer/footer.css
+++ b/frontend/src/blocks/footer/footer.css
@@ -2,14 +2,15 @@
 
 .footer {
   width: 882px;
-  margin: 66px auto 60px;
+  margin: 66px auto 0;
+  padding-bottom: 60px;
 }
 
 @media screen and (max-width: 881px) {
   .footer {
     max-width: 582px;
     margin-top: 48px;
-    margin-bottom: 36px;
+    padding-bottom: 36px;
   }
 }
 
